Fixed the wallets scrollbar

--- a/app/src/assets/styles/variables.scss
+++ b/app/src/assets/styles/variables.scss
@@ -20,3 +20,13 @@ $mainColor: #7900FF;
     padding-left: 20px;
     padding-right: 20px;
 }
+.desktop-card-style{
+    padding: 1%;
+    background-color: #FFFFFF;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.19);
+    border-radius: 8px;
+    position: relative;
+}
